# tubular

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  QWEN.md  README.md  bootstrap_checklist.md  check_implementation.py  compiler.tub  compiler.wat  create_files.py  debug_test.rs  implementation_checklist.md  test_program.tub  test_simple.tb  test_warnings.tub  tubular_spec.md  valid_test.tub
benches/: README.md  core_data_structures.rs  droplet_simulation.rs  grid_operations.rs  memory_operations.rs  memory_usage.rs  parser_performance.rs  performance.rs  program_execution.rs  stack_operations.rs
docs/: language_reference.md
examples/: README.md  basic_test_from_root.tb  calculator.tb  calculator_test.tb  character_demo.tb  character_working.tb  comprehensive.tub  countdown.tb  debug_grid_test.rs  debug_test.tb  demo.tub  digit_1.tb  hello_simple.tb  hello_visible_from_root.tb  hello_working_from_root.tb  hello_world.tb  interactive_calculator.tb  letter_A.tb  memory_test.tb  memory_test_simple.tb  simple.tb  simple_a_from_root.tb  simple_calculator.tb  simple_test_from_root.tb  simple_working.tb  subroutine_test.tb  subroutine_test_simple.tb  test_arithmetic.tb  test_basic.tb  test_input.tb  test_mult.tb  test_simple.tb  visible_hello_from_root.tb  working_A_from_root.tb  working_numbers_from_root.tb  working_test_from_root.tb
src/: cli.py  compiler.py  direction.py  droplet.py  engine.py  errors.py  grid.py  interpreter.py  interpreter.py.bak  lib.rs  main.rs  parser.py  tokens.py
test/: add.tub  decrement.tub  increment.tub  number_source.tub  (+2 more)
(+93 files in other folders)
